finished image_processing script

--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,6 @@ cython_debug/
 RMBL_SnowView.code-workspace
 
 # Don't want to save all of that data
-./2019-20
+data/2019-20
+data/image_processing.ipynb
+data/tif_files.csv
