--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,10 @@ RMBL_SnowView.code-workspace
 data/2019-20
 data/image_processing.ipynb
 data/tif_files.csv
+TinyImages/Imagery
+TinyImages/Snow_Mask
+data/Cut_Images
+.DS_Store
+*.tif
+data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif
+data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xml
