--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,4 @@ data/Cut_Images
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xml
 
+*.keras
