--- a/.gitignore
+++ b/.gitignore
@@ -186,5 +186,5 @@ data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xml
 
 *.keras
-
+*.png
 *.json
