finished 100 epoch train

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ data/Cut_Images
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xml
 
+snow_venv/
+*.keras
