--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,8 @@ data/Cut_Images
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xml
 
+*.pkl
+*.keras
+*.joblib
+data/
+gabor_filters/
