--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,7 @@ data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xm
 *.keras
 *.png
 *.json
+*.pkl
+*.joblib
+data/
+gabor_filters/
