--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,7 @@ data/Cut_Images
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif
 data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xml
 
+*.keras
+*.joblib
+*.pkl
+snow/
