--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,5 @@ data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xm
 data/
 gabor_filters/
 snow_venv/
+*.exe
+*.bat
