--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,9 @@ data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xm
 *.joblib
 *.pkl
 snow/
+*.exe
+*.cfg
+*.bat
+*.ps1
+snow_venv/share/man/man1/ttx.1
+snow_venv/Scripts/activate
