tiled images and datsets

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,6 @@ data/TinyImages/Imagery/DeerCreekTrail/DeerCreekTrail_2019_05_11_snow.tif.aux.xm
 *.joblib
 data/
 gabor_filters/
+
+*.npz
+.vscode/
